feat(plugin): instrument-project-java pasa de nueve controles a doce (#86)
Cierra cuatro cajas del playbook con cambios en una sola skill. Cada
parametro sale del cuestionario de cobertura, no de una eleccion nueva.

Error Prone entra DENTRO del control 2, porque es un argumento mas del
compilador y no un control aparte. Arranca con el conjunto ERROR
unicamente: esta afinado para no dar falsos positivos, asi que nace en
verde, mientras que promover cada warning rompe un brownfield el primer
dia y el equipo desinstala la herramienta en vez de subir el umbral.

Control 10, cobertura con JaCoCo. La regla se acota al codigo nuevo y
nunca al repositorio entero: un umbral global nace en rojo y su unica
salida es bajarlo hasta que deje de significar algo, el mismo fallo que
el control 7 evita codificando lo que el repo ya hace. Falla solo en CI,
porque un gate local lento se esquiva con --no-verify en una semana.

Control 11, patrones de bug con SpotBugs. Opt-in como los secretos y el
SCA, por la misma razon. SpotBugs solo, nunca PMD al lado: dos
analizadores nuevos gritando a la vez terminan los dos apagados, y PMD se
superpone con Checkstyle. Cuando se activa, falla make check. Es ademas
lo que habilita FindSecBugs mas adelante.

Control 12, separacion de suites con Failsafe. Solo la separacion y el
perfil, nunca un framework de pruebas: elegir stack de testing por el
equipo seria mas invasivo que todo lo demas que hace la skill. make check
corre test y make ci corre verify; esa unica diferencia es el control.

Cada uno trae su procedimiento de romper y restaurar. El del control 10
tiene dos mitades a proposito: en rojo sin prueba demuestra que la regla
dispara, en verde con prueba demuestra que esta acotada al codigo nuevo.
El del 12 exige ver make test verde y make verify rojo; ambos rojos
significa que la separacion no tomo.

Playbook actualizado en el mismo commit, como manda la regla dura: D1,
DT, DU y DI pasan a verde y la Fase 2 va de 13 a 17 cajas cubiertas.
Cobe